--- a/java-postgres-playground/demo/pom.xml
+++ b/java-postgres-playground/demo/pom.xml
@@ -5,22 +5,15 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>com.example</groupId>
-    <artifactId>primeiroprojeto</artifactId>
+    <artifactId>demo</artifactId>
     <version>1.0-SNAPSHOT</version>
-    <packaging>jar</packaging>
-
-     <name>primeiroprojeto</name>
-    <url>http://www.example.com</url>
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <maven.compiler.source>17</maven.compiler.source>
-        <maven.compiler.target>17</maven.compiler.target>
-        
-       
-       
-    
-    
+        <java.version>17</java.version>
+        <maven.compiler.source>${java.version}</maven.compiler.source>
+        <maven.compiler.target>${java.version}</maven.compiler.target>
+        <maven.compiler.release>${java.version}</maven.compiler.release>
         <junit>5.6.2</junit>
         
         <!-- Plugin versions -->
@@ -40,8 +33,9 @@
             <artifactId>postgresql</artifactId>
             <version>42.6.0</version>
         </dependency>
-         
-         <!-- Dependencies -->
+
+        <!-- Dependencies -->
+    
     
         <!-- Testing dependencies-->
         <dependency>
